--- a/package.json
+++ b/package.json
@@ -4,17 +4,14 @@
   "private": true,
   "dependencies": {
     "-": "^0.0.1",
-    "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "D": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1",
+    "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.2.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +37,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "react-router-dom": "^6.25.1",
+    "tailwindcss": "^3.4.6"
   }
 }
